Add RandomString Api Doc
